added setting to skip duplicating logistic chests

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,10 +5,12 @@ BigContainersUPSPlus=Big Containers UPS+
 BigContainersUPSPlus=Adds a selection tool that reduces inventory sizes of storage buildings for UPS savings. Mod created by request!
 
 [mod-setting-name]
-BigContainersUPSPlus-box-size=UPS+ Box Size
+BigContainersUPSPlus-copy-logistic=Copy Logistic Containers
 BigContainersUPSPlus-spill-excess=Spill Excess Items
+BigContainersUPSPlus-box-size=UPS+ Box Size
 
 [mod-setting-description]
+BigContainersUPSPlus-copy-logistic=If enabled, UPS+ version of logistic containers be generated.
 BigContainersUPSPlus-box-size=This single size setting is used for all UPS+ boxes.
 BigContainersUPSPlus-spill-excess=When enabled, items in excess of the new container capacity will be spilled on the ground. [color=red]IF YOU DISABLE THIS SETTING, THESE ITEMS WILL BE DELETED INSTEAD OF SPILLED.[/color]
 
